@@ -1,7 +1,6 @@
 package io.github.lengors.scoutdesk.integrations.authentik.services;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
@@ -9,11 +8,10 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import io.github.lengors.scoutdesk.domain.commands.services.CommandService;
-import io.github.lengors.scoutdesk.integrations.authentik.commands.models.FindAuthentikUserCommand;
+import io.github.lengors.scoutdesk.domain.commands.CommandService;
+import io.github.lengors.scoutdesk.integrations.authentik.commands.FindAuthentikUserCommand;
 import io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikGroup;
-import io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikProxiedAnonymousPrincipal;
-import io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikProxiedAuthenticatedPrincipal;
+import io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikProxiedAuthentication;
 import io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikUser;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
@@ -64,7 +62,7 @@ class AuthentikProxiedAuthenticationConverter implements ProxiedAuthenticationCo
     final var roles = Optional
       .ofNullable(userRoleProperties)
       .map(UserRoleProperties::mappings)
-      .orElseGet(Collections::emptyMap);
+      .orElseGet(Map::of);
     this.mappings = roles
       .entrySet()
       .stream()
@@ -87,18 +85,18 @@ class AuthentikProxiedAuthenticationConverter implements ProxiedAuthenticationCo
    * {@link io.github.lengors.scoutdesk.integrations.authentik.models.AuthentikProxiedAuthentication} object
    */
   @Override
-  public Authentication convert(final HttpServletRequest request) {
+  @SuppressWarnings("nullness")
+  public @Nullable Authentication convert(final HttpServletRequest request) {
     final var usernameHeader = request.getHeader(AuthentikCustomHeaders.USERNAME);
     if (usernameHeader == null) {
-      return new AuthentikProxiedAnonymousPrincipal();
+      return null;
     }
 
     final AuthentikUser authentikUser;
     try {
       authentikUser = commandService.executeCommand(new FindAuthentikUserCommand(), usernameHeader);
     } catch (final NoSuchElementException exception) {
-      LOG.error("User {username={}} not found", usernameHeader, exception);
-      return new AuthentikProxiedAnonymousPrincipal();
+      return null;
     }
 
     if (!Objects.equals(authentikUser.username(), usernameHeader)) {
@@ -106,7 +104,7 @@ class AuthentikProxiedAuthenticationConverter implements ProxiedAuthenticationCo
         "User {username={}} does not match requested header: {username={}} ",
         authentikUser.username(),
         usernameHeader);
-      return new AuthentikProxiedAnonymousPrincipal();
+      return null;
     }
 
     final var userRoles = Optional
@@ -115,11 +113,11 @@ class AuthentikProxiedAuthenticationConverter implements ProxiedAuthenticationCo
       .flatMap(Collection::stream)
       .map(AuthentikGroup::name)
       .flatMap(header -> mappings
-        .getOrDefault(header, Collections.emptyList())
+        .getOrDefault(header, List.of())
         .stream())
       .toList();
 
-    return new AuthentikProxiedAuthenticatedPrincipal(
+    return new AuthentikProxiedAuthentication(
       authentikUser.username(),
       authentikUser.name(),
       userRoles,
